--- a/src/people/me/vagrant.yml
+++ b/src/people/me/vagrant.yml
@@ -1,7 +1,9 @@
 work:
   includes:
     - components/os/w16s
-    - projects/github/git
+    - components/vs/v17p
+    - stacks/sql/management
+    - projects/tt2/tt2
     - projects/aspnet/logging
     - projects/identityserver/v4
     - projects/apache/log4net
